--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
   max-width: 360px;
-  margin: 0 auto;
+  margin: 32px auto 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -8,7 +8,7 @@
 @media screen and (max-width: 767px) {
   .cover__subtitle {
     max-width: 288px;
-    margin: 0 auto;
+    margin: 16px auto 0;
     font-size: 14px;
     line-height: 16px;
   }
