--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -13,9 +13,9 @@
 }
 @media screen and (max-width: 767px) {
   .footer {
-    min-height: 310px;
     flex-direction: column;
     align-items: flex-start;
+    gap: 48px;
     max-width: 720px;
     width: calc(100% - 16px*2);
   }
