--- a/blocks/photo-greed/photo-greed.css
+++ b/blocks/photo-greed/photo-greed.css
@@ -7,20 +7,20 @@
 }
 @media screen and (max-width: 1279px) {
   .photo-greed {
-    grid-gap: 14px;
+    gap: 14px;
   }
 }
 @media screen and (max-width: 1023px) {
   .photo-greed {
     max-width: 928px;
     width: calc(100% - 24px*2);
-    grid-gap: 16px;
+    gap: 16px;
   }
 }
 @media screen and (max-width: 767px) {
   .photo-greed {
     max-width: 720px;
     width: calc(100% - 16px*2);
-    grid-gap: 12px;
+    gap: 12px;
   }
 }
