--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
+@import url(../fonts/fonts.css);
 
 @import url(../blocks/link/link.css);
 @import url(../blocks/content/content.css);
@@ -32,7 +33,6 @@
 /* __________places__________ */
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__title/card__title.css);
-@import url(../blocks/card/__accent/card__accent.css);
 @import url(../blocks/card/__website/card__website.css);
 @import url(../blocks/card/__url-heading/card__url-heading.css);
 @import url(../blocks/card/__link/card__link.css);
